[package]
name = "labelmaker"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.65"
description = "Create & enforce sets of labels in GitHub repositories"
authors = ["John Thorvald Wodder II <labelmaker@varonathe.org>"]
repository = "https://github.com/jwodder/labelmaker"
documentation = "https://github.com/jwodder/labelmaker"
license = "MIT"
keywords = []
# See <https://crates.io/category_slugs> for a list of categories
categories = []
exclude = ["/.*"]

[dependencies]
anstream = "0.6.4"
anstyle = "1.0.4"
clap = { version = "4.4.6", default-features = false, features = ["derive", "env", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
fern = "0.6.2"
ghrepo = { version = "0.5.0", default-features = false }
log = "0.4.20"
patharg = "0.3.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.49"
unicase = "2.7.0"
url = "2.4.1"

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
serde_json = "1.0.107"
