[package]
name = "labelmaker"
version = "0.4.0-dev"
edition = "2021"
rust-version = "1.70"
description = "Create & enforce sets of labels in GitHub repositories"
authors = ["John Thorvald Wodder II <labelmaker@varonathe.org>"]
repository = "https://github.com/jwodder/labelmaker"
documentation = "https://github.com/jwodder/labelmaker"
license = "MIT"
keywords = ["github", "github-labels"]
categories = ["command-line-utilities"]
exclude = ["/.*"]

[dependencies]
anstream = "0.6.4"
anstyle = "1.0.4"
anyhow = "1.0.75"
clap = { version = "4.4.6", default-features = false, features = ["derive", "env", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
csscolorparser = { version = "0.6.2", features = ["serde"] }
fern = "0.6.2"
gh-token = "0.1.5"
ghrepo = { version = "0.5.0", default-features = false }
indenter = "0.3.3"
itertools = "0.11.0"
log = "0.4.20"
mime = "0.3.17"
parse_link_header = { version = "0.3.3", features = ["url"] }
patharg = "0.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
smartstring = "1.0.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["rt", "macros", "time"] }
toml = "0.8.2"
unicase = "2.7.0"
url = "2.4.1"

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.4"
rand_chacha = "0.3.1"
rstest = { version = "0.18.2", default-features = false }
